Rename package and imports to phys-sims-utils/phys_sims_utils

--- a/docs/v0.3-roadmap.md
+++ b/docs/v0.3-roadmap.md
@@ -6,7 +6,7 @@ Target release window: 2026 Q2
 
 ## Vision
 
-`research-utils` should be a portable, simulation-agnostic research tooling stack that can be
+`phys-sims-utils` should be a portable, simulation-agnostic research tooling stack that can be
 carried from undergraduate lab work into graduate research environments.
 
 For v0.3, the focus is practical optics optimization support where experiment scripts and
@@ -27,7 +27,7 @@ contracts, and optimization while keeping simulator/physics truth in adapters an
 - Docs and examples for lab member onboarding
 
 ### Out of scope
-- Embedding optics physics models in `research-utils`
+- Embedding optics physics models in `phys-sims-utils`
 - Domain-specific simulation correctness checks
 - Simulator-specific heuristics in core ML/harness modules
 
