--- a/docs/v0.4-roadmap.md
+++ b/docs/v0.4-roadmap.md
@@ -5,12 +5,12 @@ Status: Planned
 
 ## Vision
 
-`research-utils` v0.4 focuses on making agent-assisted usage a first-class, reproducible,
+`phys-sims-utils` v0.4 focuses on making agent-assisted usage a first-class, reproducible,
 and simulation-agnostic experience.
 
 The target user experience is that a lab member can interact with a chatbot (or equivalent
 agent interface) to reliably:
-1. adapt an existing simulation codebase to work with `research-utils` contracts,
+1. adapt an existing simulation codebase to work with `phys-sims-utils` contracts,
 2. reason about optimization strategy choices for a specific study,
 3. generate canonical graphics and summaries from sweep/optimization outputs.
 
@@ -82,7 +82,7 @@ Define stable, typed interfaces for core agent intents.
 ### Milestone B: Repository adaptation assistant
 
 Provide deterministic assistance for integrating existing codebases with
-`research-utils` contracts.
+`phys-sims-utils` contracts.
 
 **Expected deliverables**
 - Workflow that inspects a repository and emits adaptation artifacts (report + scaffold
@@ -182,7 +182,7 @@ Each v0.4 milestone should include the following verification layers:
 v0.4 is complete when all of the following are true:
 
 1. A lab member can obtain deterministic adaptation guidance for integrating an existing
-   simulation workflow with `research-utils`.
+   simulation workflow with `phys-sims-utils`.
 2. A lab member can receive deterministic, contract-valid optimization strategy guidance with
    explicit rationale and fallbacks.
 3. A lab member can request canonical graphics/summaries from existing result artifacts through
