Implement v0.3 mixed-parameter roadmap and release updates

--- a/docs/v0.3-roadmap.md
+++ b/docs/v0.3-roadmap.md
@@ -1,7 +1,7 @@
 # v0.3 Roadmap: Optics optimization workflows for lab adoption
 
 Date ratified: 2026-02-13
-Status: Planned
+Status: Complete
 Target release window: 2026 Q2
 
 ## Vision
@@ -34,32 +34,32 @@ contracts, and optimization while keeping simulator/physics truth in adapters an
 ## Milestones
 
 ### Milestone 1: Mixed-parameter contract extension
-- Add discrete/categorical parameter support to `Parameter`/`ParameterSpace` contracts without
+- [x] Add discrete/categorical parameter support to `Parameter`/`ParameterSpace` contracts without
   breaking existing continuous workflows.
-- Add encode/decode and validation tests for mixed spaces.
-- Add ADR describing contract evolution and compatibility guarantees.
+- [x] Add encode/decode and validation tests for mixed spaces.
+- [x] Add ADR describing contract evolution and compatibility guarantees.
 
 ### Milestone 2: Deterministic topology-aware optimization flow
-- Ensure optimization runner and strategies can evaluate candidates representing
+- [x] Ensure optimization runner and strategies can evaluate candidates representing
   component inclusion/exclusion decisions.
-- Add determinism tests proving same seed + same inputs yield identical topology decisions
+- [x] Add determinism tests proving same seed + same inputs yield identical topology decisions
   and best-so-far history.
-- Keep strategy interfaces unchanged (`ask`/`tell`) while extending internal candidate handling.
+- [x] Keep strategy interfaces unchanged (`ask`/`tell`) while extending internal candidate handling.
 
 ### Milestone 3: Canonical reporting + plotting for structure changes
-- Extend run-summary/reporting helpers to include structure metadata in a stable schema.
-- Add proof-of-decision tests locking report keys and ordering for mixed-parameter runs.
-- Add plotting helpers (or report hooks) to compare objective tradeoffs across structure families.
+- [x] Extend run-summary/reporting helpers to include structure metadata in a stable schema.
+- [x] Add proof-of-decision tests locking report keys and ordering for mixed-parameter runs.
+- [x] Add plotting helpers (or report hooks) to compare objective tradeoffs across structure families.
 
 ### Milestone 4: Agent tooling for reproducible optics studies
-- Add deterministic experiment generator templates for mixed-parameter/topology studies.
-- Add validator checks for explicit seeds, provenance markers, and structure metadata fields.
-- Keep outputs artifact-only and simulator-agnostic per ADR 0006 boundaries.
+- [x] Add deterministic experiment generator templates for mixed-parameter/topology studies.
+- [x] Add validator checks for explicit seeds, provenance markers, and structure metadata fields.
+- [x] Keep outputs artifact-only and simulator-agnostic per ADR 0006 boundaries.
 
 ### Milestone 5: Lab onboarding and release readiness
-- Publish a short lab-facing quickstart for running and replaying an optics optimization study.
-- Validate lint, typing, and fast tests on all v0.3 changes.
-- Prepare release notes and finalize v0.3 status updates in `STATUS.md`.
+- [x] Publish a short lab-facing quickstart for running and replaying an optics optimization study.
+- [x] Validate lint, typing, and fast tests on all v0.3 changes.
+- [x] Prepare release notes and finalize v0.3 status updates in `STATUS.md`.
 
 ## Acceptance criteria
 
