Implement v0.4 agent workflow roadmap

--- a/docs/v0.4-roadmap.md
+++ b/docs/v0.4-roadmap.md
@@ -1,7 +1,7 @@
 # v0.4 Roadmap: Agent-first workflows for low-friction research usage
 
 Date ratified: 2026-02-13
-Status: Planned
+Status: Completed (2026-02-13)
 
 ## Vision
 
